--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,6 +110,17 @@
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="js/charts.js"></script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99294159-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-99294159-3');
+    </script>
+
+
 </body>
 
 </html>
